--- a/FrontEnd/NapakReligi.html
+++ b/FrontEnd/NapakReligi.html
@@ -139,7 +139,7 @@
         
         <div class="hero-text">
           <h4>Wisata</h4>
-          <h1>Pantai Indah</h1>
+          <h1> Napak Religi</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam hic iste ex quas quae atque numquam sunt architecto adipisci assumenda perspiciatis maiores nobis placeat, maxime id eos nemo odio consequatur.</p>
         </div>
       </header>
@@ -192,6 +192,54 @@
           document.getElementById("popup").style.display = "none";
         });
       </script>
+
+      <div class="container my-5 text-center">
+        <h5 class="section-title px-3">Napak Religi</h5>
+        <div class="contentPaketan p-4 shadow-lg rounded bg-light">
+            <p class="px-4" style="font-size: 16px;">
+                "Napak Religi" adalah perjalanan spiritual yang membawa Anda menelusuri jejak sejarah keagamaan 
+                dan budaya di berbagai destinasi suci. Dalam perjalanan ini, Anda dapat mengunjungi tempat-tempat 
+                ibadah bersejarah, makam tokoh agama, serta situs religi yang memiliki nilai spiritual mendalam. 
+                Tidak hanya menjadi perjalanan wisata, tetapi juga sebagai kesempatan untuk memperkaya diri 
+                dengan nilai-nilai kebijaksanaan dan refleksi spiritual.
+            </p>
+            <p class="px-4" style="font-size: 16px;">
+                Beberapa destinasi yang termasuk dalam Napak Religi meliputi:
+            </p>
+            <ul class="list-group list-group-flush px-4" style="font-size: 15px;">
+                <li class="list-group-item">🕌 Masjid bersejarah dan pusat kajian Islam</li>
+                <li class="list-group-item">⛪ Gereja tua dan tempat ibadah bersejarah</li>
+                <li class="list-group-item">🕍 Klenteng serta tempat peribadatan tradisional</li>
+                <li class="list-group-item">🏯 Candi peninggalan zaman kuno</li>
+                <li class="list-group-item">🪔 Makam tokoh agama dan wali</li>
+            </ul>
+        </div>
+      </div>
+
+      <div class="container mt-4 ">
+        <div class="row g-4">
+            <!-- Destinasi 1 -->
+            <div class="col-md-4 text-center">
+                <img src="img/MasjidAgung.jpg" class="img-fluid rounded" alt="Masjid Agung" style="width: 100%; max-height: 200px; object-fit: cover;">
+                <h6 class="mt-2">Masjid Agung</h6>
+                <p class="small">Salah satu masjid bersejarah yang menjadi pusat kajian Islam.</p>
+            </div>
+            <!-- Destinasi 2 -->
+            <div class="col-md-4 text-center">
+                <img src="img/Candi.jpeg" class="img-fluid rounded" alt="Candi Borobudur" style="width: 100%; max-height: 200px; object-fit: cover;">
+                <h6 class="mt-2">Candi </h6>
+                <p class="small">Candi Buddha terbesar yang menjadi pusat ziarah spiritual.</p>
+            </div>
+            <!-- Destinasi 3 -->
+            <div class="col-md-4 text-center">
+                <img src="img/makam.jpeg" class="img-fluid rounded" alt="Makam Sunan Gunung Jati" style="width: 100%; max-height: 200px; object-fit: cover;">
+                <h6 class="mt-2">Makam Syekh Mubarok</h6>
+                <p class="small">Salah satu makam Wali Songo yang sering dikunjungi peziarah.</p>
+            </div>
+        </div>
+    </div>
+    
+
 
 <!-- Bootstrap JS -->
 <script src="js/bootstrap.bundle.min.js"></script>
