--- a/FrontEnd/rute.html
+++ b/FrontEnd/rute.html
@@ -168,7 +168,7 @@
         <!-- Input Lokasi -->
         <div class="input-container">
             <input type="text" id="start-location" class="input-box" placeholder="Masukkan lokasi awal">
-            <input type="text" id="end-location" class="input-box" placeholder="Masukkan tujuan">
+            <input type="text" id="end-location" class="input-box" placeholder="Masukkan lokasi tujuan">
             <button id="search-route" class="search-button">Cari Rute</button>
         </div>
         <div id="map"></div>
