--- a/FrontEnd/berita.html
+++ b/FrontEnd/berita.html
@@ -261,7 +261,7 @@
                 <div class="row g-4 justify-content-center">
 
                     <!-- Card Item (repeatable block) -->
-                    <div class="row row-cols-2 row-cols-md-2 row-cols-lg-3 g-3">
+                    <div class="col-6 col-md-6 col-lg-4">
                         <div class="blog-item">
                             <div class="blog-img">
                                 <div class="blog-img-inner">
@@ -282,6 +282,7 @@
                     <!-- End Card Item -->
 
                     <!-- Card Item (repeatable block) -->
+                    <div class="col-6 col-md-6 col-lg-4">
                         <div class="blog-item">
                             <div class="blog-img">
                                 <div class="blog-img-inner">
