responsive about.html

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -20,7 +20,7 @@
 
         <!-- Libraries Stylesheet -->
         <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-        <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+        <!-- <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet"> -->
 
 
         <!-- Customized Bootstrap Stylesheet -->
@@ -1630,7 +1630,7 @@
         <script src="lib/easing/easing.min.js"></script>
         <script src="lib/waypoints/waypoints.min.js"></script>
         <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-        <script src="lib/lightbox/js/lightbox.min.js"></script>
+        <!-- <script src="lib/lightbox/js/lightbox.min.js"></script> -->
         
 
         <!-- Template Javascript -->
