--- a/FrontEnd/about.html
+++ b/FrontEnd/about.html
@@ -199,15 +199,28 @@
                     font-size: 20px;
                 }
 
-                /* BERITA */
-                .col-12.col-sm-6 {
-                    /* border: 2px solid rebeccapurple; */
-                    width: 250px !important;
-                    /* margin: 2px !important; */
+                /* VISI MISI */
+                .img-fluid.w-100 {
+                    border: 2px solid blue;
                 }
-                /* galery */
-                .tab-content {
-                    padding: 0px !important;
+                .col-lg-7 {
+                    font-size: 15px;
+                    border: 2px solid rgb(255, 42, 0);
+                }
+                .mx-auto.text-center.mb-5 {
+                    margin-bottom: 20px !important;
+                    /* border: 2px solid blue; */
+                }
+                .section-title {
+                    font-size: 15px;
+                   
+                }
+                /* PERANGKAT DESA */
+                .container-fluid.guide.py-5 {
+                    border: 2px solid red;
+                }
+                .guide-img .guide-icon.rounded-pill.p-2 .btn {
+                    font-size: 15px !important;
                 }
                 
             }
@@ -574,7 +587,7 @@
 
     </head>
 
-    <body>
+    <body style="border: 2px solid red; ">
 
         <!-- Spinner Start -->
         <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
@@ -644,8 +657,9 @@
                         </div>
                     </div>
                     <div class="col-lg-7" style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8))">
-                        <h3 class="section-about-title pe-3">Kecamatan Tigaraksa</h3>
-
+                        <div class="mx-auto text-center mb-5" style="max-width: 900px; margin-bottom: 30px;">
+                            <h3 class="section-title px-3"> Visi dan Misi</h3>
+                        </div>
                         <!-- Container untuk Visi -->
                         <div class="visi-container p-4 mb-4">
                             <h1 class="mb-4">Visi</h1>
