--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -238,7 +238,10 @@
                 
             }
 
-            @media (max-width: 425px) {
+            @media (max-width: 426px) {
+                .navbar-brand h1 .subtext {
+                    margin-left: 31px !important;
+                }
                 .nav.nav-pills {
                     /* justify-content: flex-start;
                     align-items: flex-start; */
